# 462deferred

./: README.txt  mbeyri.docx  mbeyri_1.txt  writeup.txt
scenes/: README.txt  cube.scene  dragon.scene  scene_file_format.txt  toy.scene
scenes/models/: basic_mats.mtl  buddha.mtl
scenes/shadows/: README
scenes/shadows/closedcitadel/: mycitadel.anim  mycitadel.mtl  mycitadel.scene  mycitadel.scene.original
scenes/shadows/closedcitadel/maps/: bricks_05_dif.tga  bricks_05_hm.tga  bricks_05_spec.tga  dirt.tga  stones_08_dif.tga  wood_bark_02_dark_dif.tga  wood_bark_02_dif.tga
scenes/shadows/villa/: newvilla.mtl  newvilla.scene
scenes/sibenik/: sibenik.mtl  sibenik.scene
shaders/: directional_light_pass.fs  directional_light_pass.vs  geometry_pass.fs  geometry_pass.vs  point_light_pass.fs  shadow_first_pass.fs  shadow_first_pass.vs  shadow_second_pass.fs  shadow_second_pass.vs  simple_triangle.fs  simple_triangle.vs  spot_light_pass.fs  spot_light_pass.vs  stencil_pass.fs
src/: CMakeLists.txt
src/application/: CMakeLists.txt  main.cpp
src/cmake/: CMakeLists.txt
src/renderer/: CMakeLists.txt  GeometryBuffer.cpp  GeometryBuffer.hpp  RendererInitData.hpp  Shader.cpp  Shader.hpp  ShadowMap.cpp  ShadowMap.hpp  camera.cpp  camera.hpp  math.hpp  renderer.cpp  renderer.hpp
src/scene/: CMakeLists.txt  Model.cpp  Model.hpp  Vertex.hpp  objmodel.cpp  objmodel.hpp  scene.cpp  scene.hpp
